[tool.poetry]
name = "pytse-client"
version = "0.6.3"

description = "tehran stock exchange(TSE) client in python"
authors = ["glyphack <sh.hooshyari@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "*"
requests = "^2.23.0"
jdatetime = "^3.6.2"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
