[tool.poetry]
name = "pytse-client"
version = "0.14.0"

description = "tehran stock exchange(TSE) client in python"
authors = ["glyphack <sh.hooshyari@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.2"
pandas = "*"
requests = "^2.23.0"
jdatetime = "^3.6.2"
beautifulsoup4 = "^4.9.3"
tenacity = "^7.0.0"
aiohttp = "^3.7.4"
lxml = "^4.6.3"
black = "^22.6.0"

[tool.poetry.dev-dependencies]
pynvim = "^0.4.3"
pylint = "^2.15.0"
isort = "^5.10.1"
black = "^22.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
src_paths = ["isort", "test"]
line_length = 79
